--- a/ums/src/main/res/values/colors.xml
+++ b/ums/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FF5722</color>
     <!--<color name="colorPrimary">#f39c12</color>-->
     <!--<color name="colorPrimaryDark">#FFC107</color>-->
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#EF6C00</color>
+    <color name="colorPrimary">#12153B</color>
+    <color name="colorPrimaryDark">#12153B</color>
     <color name="niceGreenish" tools:ignore="MissingDefaultResource">#009968</color>
     <color name="deepBlue" tools:ignore="MissingDefaultResource">#3f51b5</color>
     <color name="white">#fff</color>
