--- a/ums/src/main/res/layout/_state.xml
+++ b/ums/src/main/res/layout/_state.xml
@@ -38,6 +38,7 @@
                 android:gravity="center_horizontal"
                 android:padding="@dimen/text_padding"
                 android:text="TITLE"
+                android:fontFamily="sans-serif-light"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
@@ -57,6 +58,7 @@
             android:layout_height="wrap_content"
             android:lines="2"
             android:maxLines="3"
+            android:fontFamily="sans-serif-light"
             android:padding="@dimen/text_padding"
             android:text="The method where this error ocurred."
             android:textColor="@color/white"
